--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is a weather application that provides current weather conditions for a given location."
+    />
+    <meta
+      name="keywords"
+      content="weather, forecast, temperature, conditions, location"
+    />
+    <meta name="author" content="Dan Retegan" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -17,8 +26,8 @@
       <h1 class="text-muted text-center my-4">Weather App</h1>
 
       <form class="change-location my-4 text-center text-muted">
-        <label for="city">Enter a location</label>
-        <input type="text" name="city" class="form-control p-4" />
+        <label for="cityInput">Enter a location</label>
+        <input type="text" id="cityInput" class="form-control p-4" />
       </form>
 
       <div class="card shadow-lg rounded">
