--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <script src="./scripts/forecast.js"></script>
+    <script type="module" src="./scripts/forecast.js"></script>
     <script src="./scripts/app.js"></script>
   </body>
 </html>
