--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,6 @@
     </div>
 
     <script type="module" src="./scripts/forecast.js"></script>
-    <script src="./scripts/app.js"></script>
+    <script type="module" src="./scripts/app.js"></script>
   </body>
 </html>
