Weather Icons & images

--- a/src/index.html
+++ b/src/index.html
@@ -34,13 +34,15 @@
 
       <!--* Card element: -->
       <div class="card shadow-lg rounded d-none">
+        <!--* day & night image: -->
         <img
           src="https://via.placeholder.com/400x300"
           class="time card-img-top"
           alt="grey placeholder 400x300"
         />
+        <!--* weather icon: -->
         <div class="icon gb-light mx-auto text-center">
-          <!--* icon -->
+          <img src="https://via.placeholder.com/40x40" alt="weather icon" />
         </div>
 
         <!--* Details element: -->
