--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
       </div>
     </div>
 
-    <script type="module" src="./scripts/forecast.js"></script>
-    <script type="module" src="./scripts/app.js"></script>
+    <script type="module" src="./forecast.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
