--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/icons/favicon_io/favicon.ico"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Weather App</title>
   </head>
