refactoring for use icons-defs.svg

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,10 @@
         />
         <!--* weather icon: -->
         <div class="icon gb-light mx-auto text-center">
-          <img src="https://via.placeholder.com/40x40" alt="weather icon" />
+          <!--* SVG-ul va fi adăugat dinamic -->
+          <svg class="weather-icon">
+            <use xlink:href="#default-icon"></use>
+          </svg>
         </div>
 
         <!--* Details element: -->
