--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
   </head>
 
   <body>
+    <!--* div for errors  -->
+    <div class="error-message d-none"></div>
+
     <div class="container my-5 mx-auto">
       <h1 class="text-muted text-center my-4">Weather App</h1>
 
